// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getEmptyChunkReplacer > replaces import call 1`] = `
"import \\"some-module\\";
/* empty css              */import \\"other-module\\";"
`;

exports[`getEmptyChunkReplacer > replaces require call 1`] = `
"require(\\"some-module\\");
/* empty css                */require(\\"other-module\\");"
`;

exports[`getEmptyChunkReplacer > replaces require call in minified code without new lines 1`] = `"require(\\"some-module\\");/* empty css               */require(\\"other-module\\");"`;

exports[`removePureCssChunks > import of removed chunk is dropped 1`] = `
"import \\"some-module\\";
/* empty css              */import \\"other-module\\";
"
`;

exports[`removePureCssChunks > imported assets of css chunk are transfered 1`] = `
"import \\"some-module\\";
/* empty css              */import \\"other-module\\";
"
`;

exports[`removePureCssChunks > require of removed chunk is dropped 1`] = `
"require(\\"some-module\\");
/* empty css                */require(\\"other-module\\");
"
`;
